--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="team boxed-grey">
               <div class="inner">
                 <h5>Ritika Nevatia</h5>
-                <p class="subtitle">There is no secret ingredient</p>
+                <p class="subtitle">There is no secret ingredient!</p>
                 <div class="avatar"><img src="img/team/2.png" alt="" class="img-responsive img-circle" /></div>
               </div>
             </div>
