--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
             <div id="sendmessage">Your message has been sent. Thank you!</div>
             <div id="errormessage"></div>
-            <form id="contact-form" action="https://formspree.io/futari.tech@gmail.com" method="post" role="form" class="contactForm">
+            <form id="contact-form" action="http://formspree.io/futari.tech@gmail.com" method="post" role="form" class="contactForm">
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
