--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
                     <div class="validation"></div>
                   </div>
                 </div>
+                <input type="hidden" name="_next" value="http://www.futari.tech/thanks.html"/>
                 <div class="col-md-12">
                   <button type="submit" class="btn btn-skin pull-right" id="btnContactUs">
                             Send Message</button>
