--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <div class="slogan">
       <h2>WELCOME TO <span class="text_color">futari.tech</span> </h2>
-      <h4>We make take care of the technical side of your business.</h4>
+      <h4>We take care of the technical side of your business.</h4>
     </div>
     <div class="page-scroll">
       <a href="#service" class="btn btn-circle">
@@ -80,63 +80,6 @@
     </div>
   </section>
   <!-- /Section: intro -->
-
-  <!-- Section: about -->
-  <section id="about" class="home-section text-center">
-    <div class="heading-about">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-lg-offset-2">
-            <div class="wow bounceInDown" data-wow-delay="0.4s">
-              <div class="section-heading">
-                <h2>About us</h2>
-                <i class="fa fa-2x fa-angle-down"></i>
-
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-
-      <div class="row">
-        <div class="col-lg-2 col-lg-offset-5">
-          <hr class="marginbot-50">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-3">
-        </div>
-        <div class="col-md-3">
-          <div class="wow bounceInUp" data-wow-delay="0.2s">
-            <div class="team boxed-grey">
-              <div class="inner">
-                <h5>Soham Kanade</h5>
-                <p class="subtitle">Pixel Crafter</p>
-                <div class="avatar"><img src="img/team/1.png" alt="" class="img-responsive img-circle" /></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="wow bounceInUp" data-wow-delay="0.5s">
-            <div class="team boxed-grey">
-              <div class="inner">
-                <h5>Ritika Nevatia</h5>
-                <p class="subtitle">There is no secret ingredient!</p>
-                <div class="avatar"><img src="img/team/2.png" alt="" class="img-responsive img-circle" /></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- /Section: about -->
-
 
   <!-- Section: services -->
   <section id="service" class="home-section text-center bg-gray">
