Update title hindi

--- a/index-hindi.html
+++ b/index-hindi.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <titleफूटरी.टेक</title>
+  <titleफुतारी.टेक</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
