--- a/index-hi.html
+++ b/index-hi.html
@@ -223,7 +223,7 @@
                     <div class="validation"></div>
                   </div>
                 </div>
-                <input type="hidden" name="_next" value="http://www.futari.tech/thanks.html"/>
+                <input type="hidden" name="_next" value="http://www.futari.tech/thanks-hi.html"/>
                 <div class="col-md-12">
                   <button type="submit" class="btn btn-skin pull-right" id="btnContactUs">
                             मेसेज भेजें</button>
