Update and rename thanks-hindi.html to thanks-hi.html

--- a/thanks-hi.html
+++ b/thanks-hi.html
@@ -48,14 +48,14 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="http://www.futari.tech">होम</a></li>
-          <li><a href="http://www.futari.tech#service">सेवा</a></li>
-          <li><a href="http://www.futari.tech#contact">संपर्क</a></li>
+          <li class="active"><a href="http://www.futari.tech/index-hi.html">होम</a></li>
+          <li><a href="http://www.futari.tech#service/index-hi.html">सेवा</a></li>
+          <li><a href="http://www.futari.tech#contact/index-hi.html">संपर्क</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">भाषा बदलें<b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="#">English</a></li>
-              <li><a href="#">日本語</a></li>
+              <li><a href="http://www.futari.tech/index.html">English</a></li>
+              <li><a href="http://www.futari.tech/index-ja.html">日本語</a></li>
             </ul>
           </li>
         </ul>
