--- a/index-ja.html
+++ b/index-ja.html
@@ -52,7 +52,7 @@
           <li><a href="#service">サービス</a></li>
           <li><a href="#contact">コンタクト</a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">भाषा बदलें <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">言語を変更する<b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="http://www.futari.tech/index.html">English</a></li>
               <li><a href="http://www.futari.tech/index-hi.html">हिंदी</a></li>
@@ -125,7 +125,7 @@
               </div>
               <div class="service-desc">
                 <h5>ウェブサイト</h5>
-                <p>お客様のウェブサイトにタイムリーにお届けします。-完全な機能、モダンなデザイン、高品質なコード</p>
+                <p>お客様のウェブサイトにタイムリーにお届けします。-完全な機能、モダンなデザイン、高品質なコード。</p>
               </div>
             </div>
           </div>
@@ -138,7 +138,7 @@
               </div>
               <div class="service-desc">
                 <h5>アプリケーション</h5>
-                <p>全てのプラットフォーム　- Android, iOS and Windows　に渡るお客様のニーズに対応します。</p>
+                <p>全てのプラットフォーム　- Android、 iOS と Windows　に渡るお客様のニーズに対応します。</p>
               </div>
             </div>
           </div>
@@ -241,7 +241,7 @@
 				  <strong>futari.tech</strong><br>
 				  福岡<br>
 				  日本<br>
-				  <abbr title="電話">話</abbr> +81 90 6792 9079
+				  <abbr title="電話">話</abbr> 090 6792 9079
 				</address>
 
             <address>
