--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Change Language <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="#">日本語</a></li>
-              <li><a href="#">हिंदी</a></li>
+              <li><a href="http://www.futari.tech/index-ja.html">日本語</a></li>
+              <li><a href="http://www.futari.tech/index-hi.html">हिंदी</a></li>
             </ul>
           </li>
         </ul>
