--- a/index-hi.html
+++ b/index-hi.html
@@ -40,7 +40,7 @@
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="index-hi.html">
           <h1>futari.tech</h1>
         </a>
       </div>
@@ -54,8 +54,8 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">भाषा बदलें <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="#">English</a></li>
-              <li><a href="#">日本語</a></li>
+              <li><a href="http://www.futari.tech/index.html">English</a></li>
+              <li><a href="http://www.futari.tech/index-ja.html">日本語</a></li>
             </ul>
           </li>
         </ul>
