--- a/thanks-ja.html
+++ b/thanks-ja.html
@@ -40,7 +40,7 @@
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="index-ja.html">
           <h1>futari.tech</h1>
         </a>
       </div>
